# formater

./: .gitignore  Cargo.toml  README.md
assets/: HUNGARIAN_ALPHABET.txt  HU_DICTIONARY_SOURCE.txt  HU_ORTHOGRAPHY_AKH.txt  embedded_en.dic  embedded_hu.dic  embedded_hu_abbreviations.dic  embedded_hu_alphabet.dic  embedded_hu_supplement.dic  embedded_tech_en.dic  embedded_tech_hu.dic  hu_frequency_hermitdave.dic
dicts/: README.txt
scripts/: build_hu_frequency_dic.py
src/: dedup.rs  diff_view.rs  docx.rs  learn.rs  lib.rs  main.rs  run.rs  spell.rs  xlsx.rs  zip_safe.rs
