[package]
name = "formater"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
eframe = { version = "0.29", default-features = true }
rfd = "0.15"
hunspell-rs = { version = "0.4.0", optional = true, default-features = false, features = [
    "bundled",
] }
quick-xml = "0.39.2"
regex = "1.12.3"
symspell = "0.5.2"
unicode-segmentation = "1.13.2"
zip = { version = "8.4", default-features = false, features = ["deflate"] }
similar = "2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

[lib]
name = "formater"
path = "src/lib.rs"

[[bin]]
name = "formater-gui"
path = "src/bin/formater-gui.rs"

[features]
default = []
hunspell = ["dep:hunspell-rs"]

# Kisebb / gyorsabb release bináris: LTO + egy codegen unit + szimbólumok levágása.
# Lassabb linkelés: ha zavaró, állítsd `lto = "thin"`-re.
[profile.release]
lto = true
codegen-units = 1
strip = true
